Fix text alignment for headings in justified text to exclude note titles

--- a/PersonalWebsite/src/styles/global.css
+++ b/PersonalWebsite/src/styles/global.css
@@ -3,7 +3,7 @@
 @plugin '@tailwindcss/typography';
 
 
-.text-justify :is(h1, h2, h3, h4, h5, h6) {                                                                                                                                                                   
+.text-justify :is(h1, h2, h3, h4, h5, h6) :not(.note-title) {                                                                                                                                                                   
 text-align: left;                                                                                                                                                                                           
 }                                                                                                                                                                                                             
        
